# Uzum

./: .env.example  .env.prod  .gitignore  Makefile  README.md  TODO  docker commands.txt  docker-compose.yaml  nginx.conf  optimization.txt  pyproject.toml
apps/: admin.py  admin_site.py  apps.py  documents.py  filters.py  forms.py  managers.py  middleware.py  paginations.py  permissions.py  serializer.py  serializers.py  siganls.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/consumers/: __init__.py  base.py  chat_consumers.py  utils.py
apps/fixtures/: categories.json  cities.json  products.json  sellers.json  shops.json  users.json  uzum_barcha_nomlar.csv  uzum_barcha_nomlar.xlsx
apps/models/: __init__.py  addresses.py  base.py  carts.py  categories.py  chats.py  cities.py  comments.py  delivery_points.py  favorites.py  feature.py  features.py  managers.py  orders.py  product.py  products.py  user.py  users.py  utils.py
apps/products/: __init__.py  documents.py
apps/serializers/: __init__.py  auths.py  chats.py  products.py
apps/views/: __init__.py  auths.py  chats.py  products.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: index.ts
frontend/src/components/cart/: CartDrawer.tsx
frontend/src/components/category/: CategoryMenu.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  MainLayout.tsx
frontend/src/components/product/: ProductCard.tsx  ProductGrid.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Input.tsx  LoadingSpinner.tsx  Modal.tsx
frontend/src/hooks/: index.ts  useAuth.ts  useDelivery.ts  useProducts.ts  useShops.ts
frontend/src/pages/: CartPage.tsx  ChatPage.tsx  FavoritesPage.tsx  HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx  OrdersPage.tsx  ProductDetailPage.tsx  ProductListPage.tsx  ProfilePage.tsx  ShopPage.tsx
frontend/src/providers/: QueryProvider.tsx
frontend/src/services/: api.ts
frontend/src/stores/: authStore.ts  cartStore.ts  favoritesStore.ts  index.ts
frontend/src/types/: index.ts
frontend/src/utils/: helpers.ts
root/: asgi.py  celery.py  middleware.py  routing.py  settings.py  urls.py
static/js/: chat.js
templates/admin/: login.html  login_confirm.html
